--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Build for 10.1")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-project(MTSToNoteExpression VERSION 0.9.0 LANGUAGES C CXX)
+project(tuning-note-claps VERSION 0.9.0 LANGUAGES C CXX)
 
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 17)
@@ -15,11 +15,15 @@ target_include_directories(mts PUBLIC libs/MTS-ESP/Client)
 add_subdirectory(libs/clap EXCLUDE_FROM_ALL)
 add_subdirectory(libs/clap-helpers EXCLUDE_FROM_ALL)
 
+configure_file(src/cmake_info.h.in
+        ${CMAKE_BINARY_DIR}/generated/cmake_info.h)
+
 add_library(${PROJECT_NAME} MODULE
         src/mtsne.cpp
         src/clap_descriptors.cpp
         )
 target_link_libraries(${PROJECT_NAME} clap-core clap-helpers mts)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_BINARY_DIR}/generated)
 
 if(APPLE)
     set_target_properties(${PROJECT_NAME} PROPERTIES
@@ -27,8 +31,8 @@ if(APPLE)
             BUNDLE_EXTENSION clap
             MACOSX_BUNDLE_GUI_IDENTIFIER org.surgesynthteam.${PROJECT_NAME}
             MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
-            MACOSX_BUNDLE_BUNDLE_VERSION "0.1"
-            MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1"
+            MACOSX_BUNDLE_BUNDLE_VERSION "${PROJECT_VERSION}"
+            MACOSX_BUNDLE_SHORT_VERSION_STRING "${PROJECT_VERSION}"
             MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/cmake/${PROJECT_NAME}.plist.in
             )
     target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Werror)
