--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
             name: mac
             dir_build: ./build
             file_name: tuning-note-claps.clap
+            zip_arguments: -r
           - os: windows-latest
             name: win
             dir_build: ./build/Release
@@ -64,7 +65,7 @@ jobs:
       - name: Compress binary
         run: |
           cd "${{ matrix.dir_build }}"
-          zip ${{ matrix.file_name }}-${{ matrix.name }}.zip ${{ matrix.file_name }}${{ matrix.file_ext }}
+          zip ${{ matrix.zip_arguments }} ${{ matrix.file_name }}-${{ matrix.name }}.zip ${{ matrix.file_name }}${{ matrix.file_ext }}
 
       - name: Upload binary
         uses: actions/upload-release-asset@v1
