--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ project(tuning-note-claps VERSION 0.9.1 LANGUAGES C CXX)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(mts STATIC libs/MTS-ESP/Client/libMTSClient.cpp)
-target_include_directories(mts PUBLIC libs/MTS-ESP/Client)
+add_library(mts STATIC hack/libMTSClient.cpp)
+target_include_directories(mts PUBLIC hack/)
 
 add_subdirectory(libs/clap EXCLUDE_FROM_ALL)
 add_subdirectory(libs/clap-helpers EXCLUDE_FROM_ALL)
