--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,8 @@ elseif(UNIX)
     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".clap" PREFIX "")
 else()
     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".clap" PREFIX "")
+    if (MSVC)
+        message(STATUS "Adding Shell32 etc... to link")
+        target_link_libraries(${PROJECT_NAME} Shell32 Ole32)
+    endif()
 endif()
